Remove joshing warning for unused files

--- a/app/src/js/.jshintrc
+++ b/app/src/js/.jshintrc
@@ -7,7 +7,7 @@
   "noarg": true,
   "sub": true,
   "undef": true,
-  "unused": "vars",
+  "unused": false,
   "boss": true,
   "eqnull": true,
   "browser": true,
