--- a/app/bower.json
+++ b/app/bower.json
@@ -24,6 +24,8 @@
     "d3": "~3.5.6",
     "topojson": "~1.6.19",
     "d3-geo-projection": "~0.2.15",
-    "bluebird": "~2.9.34"
+    "bluebird": "~2.9.34",
+    "d3-transform": "git@github.com:trinary/d3-transform.git",
+    "underscore": "~1.8.3"
   }
 }
