--- a/app/bower.json
+++ b/app/bower.json
@@ -26,6 +26,7 @@
     "d3-geo-projection": "~0.2.15",
     "bluebird": "~2.9.34",
     "d3-transform": "git@github.com:trinary/d3-transform.git",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "mapbox.js": "~2.2.1"
   }
 }
