--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-cssmin": "^0.13.0",
     "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-jst": "^0.6.0",
     "grunt-contrib-stylus": "^0.22.0",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1"
