--- a/app/src/js/.jshintrc
+++ b/app/src/js/.jshintrc
@@ -24,6 +24,7 @@
     "Promise": true,
     "JST": true,
     "Config": true,
-    "MapWrapper": true
+    "MapWrapper": true,
+    "PanelManager": true
   }
 }
