--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "jquery": "~2.1.4",
     "d3": "~3.5.6",
-    "topojson": "~1.6.19"
+    "topojson": "~1.6.19",
+    "bluebird": "~2.9.34",
+    "tipsy": "~0.1.7"
   }
 }
