--- a/sketches2/Makefile
+++ b/sketches2/Makefile
@@ -3,12 +3,12 @@ REGION_FILES = \
 	geo/idp.shp \
 	geo/camps.shp \
 	geo/crossings.shp \
-	data/sites.json \
+	src/data/sites.json \
 	geo/region.shp
 
 SYRIA_FILES = \
 	geo/syria.shp \
-	data/syria.json \
+	src/data/syria.json \
 	geo/syriaCapital.shp \
 	geo/syriaMajorCities.shp
 
@@ -25,8 +25,8 @@ geo/camps.shp:
 geo/crossings.shp:
 	ogr2ogr -f 'ESRI Shapefile' -t_srs 'EPSG:4326' geo/crossings.shp ../../gp-conflict-1/data/geo/Syria_BorderCrossings_2015Apr16_HIU_USDoS/Syria_BorderCrossings_2015Apr16_HIU_USDoS.shp
 
-data/sites.json: geo/idp.shp geo/camps.shp geo/crossings.shp geo/region.shp
-	node_modules/.bin/topojson -p -o data/sites.json --width 600 --margin 20 --cartesian -- region=geo/region.shp camps=geo/camps.shp idp=geo/idp.shp crossings=geo/crossings.shp
+src/data/sites.json: geo/idp.shp geo/camps.shp geo/crossings.shp geo/region.shp
+	node_modules/.bin/topojson -p -o src/data/sites.json --width 600 --margin 20 --cartesian -- region=geo/region.shp camps=geo/camps.shp idp=geo/idp.shp crossings=geo/crossings.shp
 
 clean_region:
 	rm -f -- $(REGION_FILES)
@@ -42,8 +42,8 @@ geo/syriaCapital.shp:
 geo/syriaMajorCities.shp:
 	ogr2ogr -f 'ESRI Shapefile' -t_srs 'EPSG:4326' geo/syriaMajorCities.shp ../Qgis/areas/SyriaCities.shp
 
-data/syria.json: geo/syria.shp geo/syriaMajorCities.shp geo/syriaCapital.shp
-	node_modules/.bin/topojson -p -o data/syria.json --width 516 --margin 9 --cartesian -- syria=geo/syria.shp capital=geo/syriaCapital.shp cities=geo/syriaMajorCities.shp
+src/data/syria.json: geo/syria.shp geo/syriaMajorCities.shp geo/syriaCapital.shp
+	node_modules/.bin/topojson -p -o src/data/syria.json --width 516 --margin 9 --cartesian -- syria=geo/syria.shp capital=geo/syriaCapital.shp cities=geo/syriaMajorCities.shp
 
 clean_syria:
 	rm -f -- $(SYRIA_FILES)
