--- a/sketches2/package.json
+++ b/sketches2/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "sketches2",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "dependencies": {
-    "topojson": "^1.6.19"
-  },
+  "name": "gp-conflict-1",
+  "private": true,
+  "version": "0.0.1",
+  "description": "Global Post, Conflict Piece, 1",
+  "author": "Irene Ros",
   "devDependencies": {
-    "topojson": "^1.6.19"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-cssmin": "^0.13.0",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-jst": "^0.6.0",
+    "grunt-contrib-stylus": "^0.22.0",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-gh-pages": "^0.10.0"
+  }
 }
