rename region json to match convention

--- a/app/Makefile
+++ b/app/Makefile
@@ -11,7 +11,7 @@ REGION_FILES = \
 	geo/idp.shp \
 	geo/camps.shp \
 	geo/crossings.shp \
-	src/data/sites.json \
+	src/data/region.json \
 	geo/region.shp
 
 SYRIA_FILES = \
@@ -37,8 +37,8 @@ geo/crossings.shp:
 	ogr2ogr -f 'ESRI Shapefile' -a_srs ${PROJECTION} geo/crossings.shp \
 		"${GEODIR}/unzipped/Syria/BorderCrossings/Syria_BorderCrossings_2015Apr16_HIU_USDoS.shp"
 
-src/data/sites.json: geo/idp.shp geo/camps.shp geo/crossings.shp geo/region.shp geo/syriaCapital.shp geo/syriaMajorCities.shp
-	node_modules/.bin/topojson -p -o src/data/sites.json --width 600 --margin 20 \
+src/data/region.json: geo/idp.shp geo/camps.shp geo/crossings.shp geo/region.shp geo/syriaCapital.shp geo/syriaMajorCities.shp
+	node_modules/.bin/topojson -p -o src/data/region.json --width 600 --margin 20 \
 		--cartesian -- region=geo/region.shp camps=geo/camps.shp idp=geo/idp.shp \
 		crossings=geo/crossings.shp capital=geo/syriaCapital.shp \
 		cities=geo/syriaMajorCities.shp
