Fixing safari animation issue

--- a/app/src/js/.jshintrc
+++ b/app/src/js/.jshintrc
@@ -22,6 +22,7 @@
     "$": true,
     "Promise": true,
     "topojson": true,
-    "imageRegionPairs": true
+    "imageRegionPairs": true,
+    "Modernizr": true
   }
 }
